# sepp

./: .gitignore  .project  .travis  .travis.yml  CHANGELOG  CHANGELOG.md  Dockerfile  LICENSE  PKG-INFO  README  README.HIPPI.md  README.SEPP.md  README.TIPP  README.TIPP.md  README.UPP.md  README.md  default.main.config  distribute_setup.py  environment.yml  exhaustive_upp.py  ez_setup.py  hmmSearcher.py  home.path  make-app.sh  merge_script.py  ncbi_taxonomy.py  pyproject.toml  run_abundance.py  run_ensemble.py  run_pasta.py  run_pasta.spec  run_pasta_gui.py  run_sepp.py  run_seqtools.py  run_tipp.py  run_tipp_tool.py  run_upp.py  run_upp2_v1.py  save_scores.py  setup.py  (+1 more)
ci/: conda_requirements.txt  env_lint.yml  environment.yml  pip_requirements.txt
satelib/: __init__.py  alignment.py  configure.py  filemgr.py  mainsate.py  sate.py  satealignerjob.py  scheduler.py  settings.py  tools.py  tree.py  treeholder.py  usersettingclasses.py  utilities.py  utility.py
sepp/: ShortReadAlignment.py  __init__.py  algorithm.py  alignment-nam.py  alignment.py  backtranslate.py  checkpointing.py  config.py  decompose_tree.py  ensemble.py  environment.yml  exhaustive.py  exhaustive_tipp.py  exhaustive_upp.py  filemgr.py  full_aln_hmm.py  hierarchical.py  hmm.py  hmm_concurrent.py  hmm_searcher.py  jobs.py  mainrpass.py  math_utils.py  metagenomics.py  problem.py  scheduler.py  scratch.py  seppJob.py  settings.py  taxonneighbourfinder.py  taxonomic.py  test_decompose.py  tools.py  tree.py  (+2 more)
sepp-package/: DEVGUIDE.md  README  README.md  relabel.py  run-sepp.sh  test.frag
(+489 files in other folders)
